src/tests/testfiles/function-declarations/12.txt
testfiles/function-declarations/12.c:6:1: error: Redefinition of function 'main'
int main(void) {
^
